# rust_curses_nmea_player

./: Cargo.toml  README.md
src/: main.rs  scanner.rs  screen.rs  udp_broadcaster.rs
src/scanner/: mod.rs
src/udp_broadcaster/: mod.rs  screen.rs  where_am_i_now.rs
