[package]
name = "rust_experiments"
version = "0.1.0"
edition = "2021"
authors = ["Tony Mattheys"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
pnet = "0.30.0"
pancurses = "0.17.0"
